--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,9 +18,8 @@
 
     <main>
       <table border="1">
-        <caption>
-          Detailed Schedule of Events for TechCon 2024
-        </caption>
+        <!-- prettier-ignore -->
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
           <tr>
             <th scope="col">Time</th>
