tried to solve prittier issues

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -17,6 +17,7 @@
     </header>
 
     <main>
+      <!-- prettier-ignore-start -->
       <table border="1">
         <!-- prettier-ignore -->
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
@@ -45,10 +46,11 @@
           </tr>
         </tbody>
       </table>
+      <!-- prettier-ignore-end -->
     </main>
 
-    <footer>
-      <p>&copy; 2024 TechCon. All rights reserved.</p>
-    </footer>
+    <!-- prettier-ignore-start -->
+    <footer><p>&copy; 2024 TechCon. All rights reserved.</p></footer>
+    <!-- prettier-ignore-end -->
   </body>
 </html>
