solved table and footer issues

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,7 +18,7 @@
 
     <main>
       <!-- prettier-ignore-start -->
-      <table border="1">
+      <table>
         <!-- prettier-ignore -->
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
@@ -49,8 +49,6 @@
       <!-- prettier-ignore-end -->
     </main>
 
-    <!-- prettier-ignore-start -->
-    <footer><p>&copy; 2024 TechCon. All rights reserved.</p></footer>
-    <!-- prettier-ignore-end -->
+    <footer><p>Copyright &copy; 2024 TechCon. All rights reserved.</p></footer>
   </body>
 </html>
