--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -49,6 +49,6 @@
       <!-- prettier-ignore-end -->
     </main>
 
-    <footer><p>Copyright &copy; 2024 TechCon. All rights reserved.</p></footer>
+    <footer><p>copyright &copy; 2024 TechCon. All rights reserved.</p></footer>
   </body>
 </html>
